# powerman

./: README.md  hie.yaml  package.yaml  powerman.cabal
app/: Main.hs
haskell/: ChangeLog.md  README.md  package.yaml
haskell/test/: Spec.hs
rust/: .rustfmt.toml  Cargo.toml
rust/examples/: config.yaml
rust/powerman/src/: commands.rs  lib.rs
rust/src/: commands.rs  config.rs  dimmer.rs  lib.rs  main.rs  sources.rs
rust/systemd/: 99-powerman.rules  generate-lockscreen-image.sh  install.sh  lock.sh  powerman@.service  resume-lock@.service
src/: Dimmer.hs
test/: DimmerSpec.hs
