[package]
name = "powerman"
version = "0.1.0"
authors = ["Fahad Riaz <fahadbr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4.11"
env_logger = "0.8.2"

